test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/ternary_assign.plx
pub fn main(none) i32 {
    a: i32 = 2
    b: i32 = 1
    ? a > b then a = 1 else a = 0
    return a
}
